--- a/source/2014-03-15-mh370.html.markdown
+++ b/source/2014-03-15-mh370.html.markdown
@@ -5,6 +5,6 @@ tags: hotchpotch
 ---
 
 马航MH370失联，8天了，不知道多少反反复复，坠海 -> 空中解体 -> 劫机，越南发消息 -> 中方转发 -> 马方否认，真相到底是什么？现在看来，
-劫机的可能性最大，而且很有可能是飞行员啊，但又让人不解的是，劫机的话，却没有人跳出来说要跟政府谈判，要得到什么。
+劫机的可能性最大，而且很有可能是飞行员啊，但又让人不解的是，劫机的话，却没有人跳出来说要跟政府谈判，想要什么你说呀，你不说我们怎么知道呀。
 
 还是等等继续看马航新闻发布会直播吧
